--- a/addons/product/views/product_views.xml
+++ b/addons/product/views/product_views.xml
@@ -43,7 +43,7 @@
                         <label for="name" string="Product Name"/>
                         <h1>
                             <div class="d-flex">
-                                <field name="priority" widget="priority" class="me-3"/>
+                                <field name="is_favorite" widget="boolean_favorite" class="me-3" nolabel="1"/>
                                 <field class="text-break" name="name" options="{'line_breaks': False}" widget="text" placeholder="e.g. Cheese Burger"/>
                             </div>
                         </h1>
@@ -167,7 +167,7 @@
                     domain="[('my_activity_date_deadline', '&gt;', context_today().strftime('%Y-%m-%d'))
                     ]"/>
                 <separator/>
-                <filter string="Favorites" name="favorites" domain="[('priority','=','1')]"/>
+                <filter string="Favorites" name="favorites" domain="[('is_favorite','=','1')]"/>
                 <separator/>
                 <filter string="Warnings" name="activities_exception"
                         domain="[('activity_exception_decoration', '!=', False)]"/>
@@ -331,7 +331,7 @@
                 <header>
                     <button string="Print Labels" type="object" name="action_open_label_layout"/>
                 </header>
-                    <field name="priority" widget="priority" nolabel="1" readonly="1"/>
+                    <field name="is_favorite" widget="boolean_favorite" nolabel="1" readonly="1"/>
                     <field name="default_code" optional="show" readonly="1"/>
                     <field name="barcode" optional="hide" readonly="1"/>
                     <field name="name" readonly="1"/>
@@ -394,7 +394,7 @@
                     <field name="default_code"/>
                     <field name="barcode"/>
                 </xpath>
-                <xpath expr="//field[@name='priority']" position="attributes">
+                <xpath expr="//field[@name='is_favorite']" position="attributes">
                     <attribute name="readonly">1</attribute>
                 </xpath>
                 <field name="list_price" position="attributes">
@@ -442,7 +442,7 @@
                                     <img t-att-src="kanban_image('product.product', 'image_128', record.id.raw_value)" alt="Product" class="o_image_64_contain"/>
                                 </div>
                                 <div class="oe_kanban_details">
-                                    <field name="priority" widget="priority" readonly="1"/>
+                                    <field name="is_favorite" widget="boolean_favorite" readonly="1" nolabel="1"/>
                                     <strong class="o_kanban_record_title">
                                         <field name="name"/>
                                         <small t-if="record.default_code.value">[<field name="default_code"/>]</small>
