--- a/addons/analytic/views/analytic_line_views.xml
+++ b/addons/analytic/views/analytic_line_views.xml
@@ -10,7 +10,6 @@
                 <field name="date" optional="show"/>
                 <field name="name"/>
                 <field name="account_id"/>
-                <field name="plan_id"/>
                 <field name="currency_id" column_invisible="True"/>
                 <field name="unit_amount" sum="Quantity" optional="hide"/>
                 <field name="product_uom_id" optional="hide"/>
@@ -28,13 +27,13 @@
             <search string="Search Analytic Lines">
                 <field name="name"/>
                 <field name="date"/>
+                <field name="auto_account_id"/>
                 <field name="account_id"/>
-                <field name="account_id" string="Cross by" filter_domain="[('move_line_id.analytic_line_ids.account_id', 'ilike', self)]"/>
-                <field name="plan_id"/>
                 <filter string="Date" name="date" date="date"/>
-                <filter string="Analytic Account" name="group_by_analytic_account" context="{'group_by': 'account_id'}"/>
-                <filter string="Analytic Plan" name="group_by_analytic_plan" context="{'group_by': 'plan_id'}"/>
                 <group string="Group By..." expand="0" name="groupby">
+                    <separator/>
+                    <filter name="account_id" context="{'group_by': 'account_id'}"/>
+                    <separator/>
                     <filter string="Date" name="group_date" context="{'group_by': 'date'}"/>
                 </group>
             </search>
@@ -113,8 +112,7 @@
         <field name="model">account.analytic.line</field>
         <field name="arch" type="xml">
             <pivot string="Analytic Items" sample="1">
-                <field name="plan_id" type="row"/>
-                <field name="account_id" type="row"/>
+                <field name="account_id"/>
                 <field name="date" interval="month" type="col"/>
                 <field name="amount" type="measure"/>
             </pivot>
