add default header and footer

--- a/addons/sale_pdf_quote_builder/views/res_config_settings_views.xml
+++ b/addons/sale_pdf_quote_builder/views/res_config_settings_views.xml
@@ -10,6 +10,7 @@
                 <div class="mt16">
                     <label for="header" class="me-2"/>
                     <field name="header"/>
+<!--                    TODO edm: find where to modify framework JS to show the file's name instead -->
                 </div>
                 <div class="mt16">
                     <label for="footer" class="me-2"/>
