--- a/addons/sale_loyalty/views/sale_order_views.xml
+++ b/addons/sale_loyalty/views/sale_order_views.xml
@@ -10,7 +10,7 @@
             <div name="so_button_below_order_lines" position="attributes">
                 <attribute name="invisible">0</attribute>
             </div>
-            <div name="so_button_below_order_lines" position="inside">
+            <xpath expr="//button[@name='action_open_discount_wizard']" position="before">
                 <button name="%(sale_loyalty.sale_loyalty_coupon_wizard_action)d"
                         type="action"
                         string="Coupon Code"
@@ -20,7 +20,7 @@
                         string="Promotions"
                         help="Update current promotional lines and select new rewards if applicable."
                         class="btn btn-secondary"/>
-            </div>
+            </xpath>
         </field>
     </record>
 
