--- a/addons/sms/views/ir_actions_server_views.xml
+++ b/addons/sms/views/ir_actions_server_views.xml
@@ -14,9 +14,21 @@
                 <label for="sms_method" invisible="state != 'sms'"/>
                     <div class="d-flex flex-column" invisible="state != 'sms'">
                         <field name="sms_method" required="state == 'sms'"/>
-                        <span class="text-muted">
-                            <field name="sms_method_helper"/>
-                        </span>
+                        <div class="text-muted">
+                            <span invisible="sms_method == 'sms'">
+                                The message will be sent as an SMS to the recipients of the template
+                                and will not appear in the messaging history.
+                            </span>
+                            <span invisible="sms_method == 'note'">
+                                The SMS will not be sent, it will only be posted as an
+                                internal note in the messaging history.
+                            </span>
+                            <span invisible="sms_method == 'comment'">
+                                The SMS will be sent as an SMS to the recipients of the
+                                template and it will also be posted as an internal note
+                                in the messaging history.
+                            </span>
+                        </div>
                     </div>
             </xpath>
         </field>
