fixup! [IMP] base_automation,*: simpler edition workflow

--- a/addons/mail/views/ir_actions_server_views.xml
+++ b/addons/mail/views/ir_actions_server_views.xml
@@ -40,9 +40,20 @@
                     <label for="mail_post_method" invisible="state != 'mail_post'"/>
                     <div class="d-flex flex-column" invisible="state != 'mail_post'">
                         <field name="mail_post_method" required="state == 'mail_post'"/>
-                        <span class="text-muted">
-                            <field name="mail_post_method_helper"/>
-                        </span>
+                        <div class="text-muted">
+                            <span invisible="mail_post_method != 'email'">
+                                The message will be sent as an email to the recipients of the
+                                template and will not appear in the messaging history.
+                            </span>
+                            <span invisible="mail_post_method != 'note'">
+                                The message will be posted as an internal note visible to internal
+                                users in the messaging history.
+                            </span>
+                            <span invisible="mail_post_method != 'comment'">
+                                The message will be posted as a message on the record,
+                                notifying all followers. It will appear in the messaging history.
+                            </span>
+                        </div>
                     </div>
                     <field name="mail_post_autofollow" invisible="1"/>
                 </xpath>
