--- a/addons/l10n_in_ewaybill_stock/views/l10n_in_ewaybill_views.xml
+++ b/addons/l10n_in_ewaybill_stock/views/l10n_in_ewaybill_views.xml
@@ -37,16 +37,49 @@
                     <field name="state" widget="statusbar" statusbar_visible="pending,sent"/>
                 </header>
                 <sheet>
+                    <div class="oe_title">
+                        <h1>
+                            <field name="display_name" readonly="1"/>
+                        </h1>
+                    </div>
                     <group>
                      <group>
                         <field string="Stock Transfer" name="stock_picking_id"/>
-                        <field name="date"/>
+                        <field name="type_in_or_out" readonly="1"/>
+                        <field name="type_id" domain="[('allowed_supply_type', 'in', ('in', 'both')) if type_in_or_out == 'in' else ('allowed_supply_type', 'in', ('out', 'both'))]"/>
                      </group>
                      <group>
-                        <field name="partner_id" string="Customer"/>
+                        <field name="partner_id" string="Customer" />
+                        <field name="date"/>
                         <field name="state_id"/>
-                        <field name="ewaybill_number" attrs="{'invisible': [('state','!=','sent')]}"/>
                      </group>
+                    </group>
+                    <group>
+                    </group>
+                    <group>
+                        <group>
+                            <field name="mode"/>
+                            <field name="transporter_id"/>
+                            <label for="distance"/>
+                            <div class="o_row" name="distance">
+                                <field name="distance"/>
+                                <span>km</span>
+                            </div>
+                            <field name="vehicle_type" invisible="mode != '1'" required="mode == '1'"/>
+                            <field name="vehicle_no" invisible="mode != '1'" required="mode == '1'"/> 
+                        </group>
+                        <group>
+                            <field name="transportation_doc_no" required="mode in ['2','3','4']"/>
+                            <field name="transportation_doc_date" required="mode in ['2','3','4']"/>
+                        </group>
+                    </group>
+                    <group string="Cancel Ewaybill" invisible="state == 'pending'">
+                        <group>
+                            <field name="cancel_reason" />
+                        </group>
+                        <group>
+                            <field name="cancel_remarks"/>
+                        </group>
                     </group>
                     <notebook>
                         <page string="Item Details">
@@ -80,38 +113,6 @@
                                     <field name="tax_totals" widget="account-tax-totals-field" nolabel="1" colspan="2" readonly="1"/>
                                 </group>
                                 <div class="clearfix"/>
-                            </group>
-                        </page>
-                        <page string="Ewaybill" name="edi_ewaybill_page">
-                            <group>  
-                                <group>
-                                    <field name="type_id"/>
-                                    <field name="transporter_id"/>
-                                    <label for="distance"/>
-                                    <div class="o_row" name="distance">
-                                        <field name="distance"/>
-                                        <span>km</span>
-                                    </div>
-                                </group>
-                                <group>
-                                </group>
-                            </group>
-                            <group string="Part B">
-                                <group>
-                                    <field name="mode"/>
-                                    <field name="vehicle_type" attrs="{'invisible': [('mode','!=','1')], 'required': [('mode','=','1')]}"/>
-                                    <field name="vehicle_no" attrs="{'invisible': [('mode','!=','1')], 'required': [('mode','=','1')]}"/> 
-                                </group>
-                                <group>
-                                    <field name="transportation_doc_no" attrs="{'required': [('mode','in',('2','3','4'))]}"/>
-                                    <field name="transportation_doc_date" attrs="{'required': [('mode','in',('2','3','4'))]}"/>
-                                </group>
-                            </group>
-                            <group>
-                                <group string="Cancel Ewaybill" attrs="{'invisible': [('state','=','pending')]}">
-                                    <field name="cancel_reason" />
-                                    <field name="cancel_remarks"/>
-                                </group>
                             </group>
                         </page>
                     </notebook>
