--- a/addons/l10n_in_ewaybill_stock/report/ewaybill_report.xml
+++ b/addons/l10n_in_ewaybill_stock/report/ewaybill_report.xml
@@ -4,7 +4,7 @@
         <template id="report_ewaybill">
             <t t-call="web.html_container">
                <t t-foreach="docs" t-as="doc">
-                    <t t-call="web.external_layout">
+                    <t t-call="web.internal_layout">
                         <div class="page">
                         <style>
                             span{
