--- a/addons/stock/views/stock_move_views.xml
+++ b/addons/stock/views/stock_move_views.xml
@@ -240,10 +240,9 @@
                     <field name="lot_id" groups="stock.group_production_lot"
                         column_invisible="not context.get('show_lots_m2o')"
                         readonly="package_level_id and parent.picking_type_entire_packs"
-                        domain="[('product_id', '=', parent.product_id), ('company_id', '=', company_id)]"
+                        domain="[('product_id', '=', parent.product_id), '|', ('company_id', '=', company_id), ('company_id', '=', False)]"
                         context="{
                             'active_picking_id': picking_id,
-                            'default_company_id': parent.company_id,
                             'default_product_id': parent.product_id,
                         }"/>
                     <field name="lot_name" string="Lot/Serial Number" widget="text" groups="stock.group_production_lot"
