--- a/addons/stock/views/stock_scrap_views.xml
+++ b/addons/stock/views/stock_scrap_views.xml
@@ -172,7 +172,7 @@
                                 <field name="product_uom_id" readonly="tracking == 'serial'" groups="uom.group_uom"/>
                             </div>
                             <field name="lot_id" groups="stock.group_production_lot"
-                                context="{'default_company_id': company_id, 'default_product_id': product_id}"
+                                context="{'default_product_id': product_id}"
                                 invisible="not product_id or tracking == 'none'"
                                 readonly="state == 'done'"
                                 required="tracking != 'none'"/>
